Chore/Fix: ScoreSaber api v1 breaking changes + Update package versions
